--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,16 +5,30 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/nav_principal"
+            android:icon="@drawable/ic_inbox"
+            android:title="@string/menu_principal" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_servico"
+            android:icon="@drawable/ic_assignment"
+            android:title="@string/menu_servicos" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_clientes"
+            android:icon="@drawable/ic_people"
+            android:title="@string/menu_clientes" />
     </group>
+    <item android:title="Entre em contato">
+
+        <menu>
+            <item
+                android:id="@+id/nav_contato"
+                android:icon="@drawable/ic_email"
+                android:title="@string/menu_contatos" />
+
+            <item
+                android:id="@+id/nav_sobre"
+                android:icon="@drawable/ic_info"
+                android:title="@string/menu_sobre"/>
+        </menu>
+    </item>
 </menu>
