--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_principal">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.br.pedro.bruno.atmconsultoria.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_principal"
+        android:name="com.br.pedro.bruno.atmconsultoria.ui.principal.PrincipalFragment"
+        android:label="@string/menu_principal"
+        tools:layout="@layout/fragment_principal" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.br.pedro.bruno.atmconsultoria.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_servico"
+        android:name="com.br.pedro.bruno.atmconsultoria.ui.servicos.ServicosFragment"
+        android:label="@string/menu_servicos"
+        tools:layout="@layout/fragment_servicos" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.br.pedro.bruno.atmconsultoria.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_clientes"
+        android:name="com.br.pedro.bruno.atmconsultoria.ui.clientes.ClientesFragment"
+        android:label="@string/menu_clientes"
+        tools:layout="@layout/fragment_clientes" />
+
+    <fragment
+        android:id="@+id/nav_contato"
+        android:name="com.br.pedro.bruno.atmconsultoria.ui.contato.ContatoFragment"
+        android:label="@string/menu_contatos"
+        tools:layout="@layout/fragment_contato" />
+
+
+    <fragment
+        android:id="@+id/nav_sobre"
+        android:name="com.br.pedro.bruno.atmconsultoria.ui.sobre.SobreFragment"
+        android:label="@string/menu_sobre"
+        tools:layout="@layout/fragment_sobre" />
+
 </navigation>
